<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Steam Tracker</string>
    <string name="search_hint">Game name …</string>
    <string name="missing_name">Please type a game name !</string>
    <string name="no_game_result">No games found</string>
    <string name="loading_game_list">Please wait few seconds\nGame list is loading… </string>
    <string name="no_internet_connection">"No internet connection !"</string>
    <string name="retry">Retry</string>
    <string name="title_activity_details">Details</string>
    <string name="action_favourite">Favourite</string>
    <string name="lang">english</string>
    <string name="currency">us</string>
    <string name="details_name">Name</string>
    <string name="details_descr">Description</string>
    <string name="details_loading">Loading…</string>
    <string name="devs">Developers</string>
    <string name="discount_price">Reduced price</string>
    <string name="discount">Discount</string>
    <string name="price">Price</string>
    <string name="publish">Publishers</string>
    <string name="release_date">Release date</string>
    <string name="score_mc">Score Metacritic</string>
    <string name="details_fav_description">favourites</string>
    <string name="player_count">Player count</string>

    <string name="large_text" translatable="false" />
    <string name="details_error_id">Error : id is invalid</string>
    <string name="fav_added">Added to favourites</string>
    <string name="fav_removed">Removed from favourites</string>
    <string name="Game_header_image_description">Game header image</string>
    <string name="title_activity_fav">Favourites</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
</resources>