<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark_blue_steam"

    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="71dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/game_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/search_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/black_blue_steam"
                android:drawableLeft="@drawable/search_loop_foreground"
                app:rippleColor="@color/grey"

                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/GamesFoundFragment"
            class="com.example.android_project.GamesListFragment.java"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/alert_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:text="@string/loading_game_list"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/black_blue_steam"
                android:text="@string/retry"
                android:textColor="@color/white"
                app:rippleColor="@color/grey" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>